# ProductionWorkshopSimulation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: event.h  logger.h  machine.h  manufactory.h  parser.h  product.h
src/: event.cpp  logger.cpp  machine.cpp  manufactory.cpp  parser.cpp  product.cpp
